<resources>
    <string name="app_name">SSResilience</string>
    <string name="login">ΣΥΝΔΕΣΗ</string>
    <string name="login_name">Όνομα Χρήστη</string>
    <string name="password">Κωδικός</string>
    <string name="register_text">ΔΗΜΙΟΥΡΓΙΑ ΛΟΓΑΡΙΑΣΜΟΥ</string>
    <string name="email">Διεύθυνση Email</string>
    <string name="age">Ηλικία</string>
    <string name="fullname">Όνομα Χρήστη</string>
    <string name="forgot_password">Ξεχάσατε τον κωδικό σας;</string>
    <string name="back_to_login">ΠΙΣΩ</string>
    <string name="profile_logout">Αποσύνδεση</string>
    <string name="full_name">Πλήρες Όνομα</string>
    <string name="profile_image">Profile Image</string>
    <string name="app_name1">Πλοήγηση</string>
    <string name="nav_open">Άνοιγμα</string>
    <string name="nav_close">Κλείσιμο</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>