<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.122"
            android:id="@+id/login"
            android:textSize="32sp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/login_email"
            app:layout_constraintTop_toBottomOf="@+id/login"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.068"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="TextFields"
            android:autofillHints="E-mail"
            android:hint="@string/login_name"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@+id/login_email"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.062"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="Password"
            android:hint="@string/password"/>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:weightSum="2"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.129">

        <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_weight="1"/>

    </LinearLayout>

    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="50dp"
            android:minWidth="250dp"
            android:max="100"
            android:indeterminate="true"
            android:progress="1"
            android:id="@+id/login_progressBar"
            tools:ignore="MissingConstraints"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintVertical_bias="0.682"/>
    <Button
            android:text="@string/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/register_screen"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.879"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.66"/>
    <Button
            android:text="@string/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/login_forgot_password"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.191"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.66"/>

</androidx.constraintlayout.widget.ConstraintLayout>